# huectl

./: LICENSE  Pipfile  huectl  pyproject.toml
huectl/: __main__.py  main.py  util.py
