[tool.poetry]
name = "huectl"
version = "0.1.0"
description = "Philips Hue smart light CLI controller."
authors = ["Nick Hanley <nicholasjhanley@gmail.com>"]
repository = "https://github.com/njhanley/huectl"

[tool.poetry.dependencies]
python = "^3.9"
phue = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
